# smart-auto-robot

./: README.md  serial.c
color_tracker/: colorHSV.py
control_from_laptop/go_when_red_origin/python/: go_when_red.py  requirements.txt
control_from_laptop/go_when_red_origin/rust/: Cargo.toml
control_from_laptop/go_when_red_origin/rust/src/: main.rs
